--- a/data-lake/pom.xml
+++ b/data-lake/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>milvus-sdk-java</artifactId>
             <version>2.0.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>dk.aau.cs.dkwe.edao.calypso</groupId>
+            <artifactId>communication</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
