--- a/entity-linker/pom.xml
+++ b/entity-linker/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>dk.aau.cs.dkwe.edao.calypso</groupId>
+            <artifactId>communication</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
