--- a/knowledge-graph/pom.xml
+++ b/knowledge-graph/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>data-lake</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>dk.aau.cs.dkwe.edao.calypso</groupId>
+            <artifactId>communication</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
