--- a/data-lake/pom.xml
+++ b/data-lake/pom.xml
@@ -12,10 +12,10 @@
     <artifactId>data-lake</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>data-lake</name>
-    <description>data-lake</description>
-    <properties>
+    <description>Semantic data lake manager</description>
+<!--    <properties>
         <java.version>17</java.version>
-    </properties>
+    </properties>-->
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -73,17 +73,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>build-image</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
