--- a/knowledge-graph/Dockerfile
+++ b/knowledge-graph/Dockerfile
@@ -1,12 +1,12 @@
 FROM ubuntu
 
 RUN apt update
-RUN apt install openjdk-17-jre openjdk-17-jdk maven -y
+RUN apt install wget openjdk-17-jre openjdk-17-jdk maven -y
 
 WORKDIR /home
 COPY .. .
 WORKDIR communication
-RUN mvn clean install
+RUN mvn clean install -DskipTests
 
 ARG MVNW=mvnw_unix
 WORKDIR ../data-lake
