--- a/data-lake/Dockerfile
+++ b/data-lake/Dockerfile
@@ -4,7 +4,12 @@ RUN apt update
 RUN apt install openjdk-17-jre openjdk-17-jdk maven -y
 
 WORKDIR /home
-COPY .. .
+
+RUN mkdir communication
+RUN mkdir data-lake
+COPY communication communication
+COPY data-lake data-lake
+
 WORKDIR communication
 RUN mvn clean install -DskipTests
 
