--- a/data-lake/pom.xml
+++ b/data-lake/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>communication</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>dk.aau.cs.dkwe.edao.calypso</groupId>
+            <artifactId>storagelayer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
