--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,10 @@ services:
       - 8083:8083
     volumes:
       - ./knowledge-graph/neo4j/:/home/knowledge-graph/neo4j
+  embeddings:
+    image: postgres
+    container_name: db
+    environment:
+      - POSTGRES_USER=calypso
+      - POSTGRES_PASSWORD=1234
+      - POSTGRES_DB=embeddings
