--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
   embeddings:
     image: postgres
     container_name: db
+    network_mode: host
     environment:
       - POSTGRES_USER=calypso
       - POSTGRES_PASSWORD=1234
