--- a/data-lake/pom.xml
+++ b/data-lake/pom.xml
@@ -59,9 +59,9 @@
         </dependency>
 
         <dependency>
-            <groupId>io.milvus</groupId>
-            <artifactId>milvus-sdk-java</artifactId>
-            <version>2.0.4</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.3</version>
         </dependency>
 
         <dependency>
