First entity linking draft

--- a/entity-linker/Dockerfile
+++ b/entity-linker/Dockerfile
@@ -6,14 +6,20 @@ RUN apt install openjdk-17-jre openjdk-17-jdk maven -y
 WORKDIR /home
 
 RUN mkdir communication
+RUN mkdir data-lake
 RUN mkdir entity-linker
 COPY communication communication
+COPY data-lake data-lake
 COPY entity-linker entity-linker
 
 WORKDIR communication
 RUN mvn clean install -DskipTests
 
 ARG MVNW=mvnw_unix
+WORKDIR ../data-lake
+RUN sed -e 's/\r$//' mvnw > mvnw_unix
+RUN chmod +x mvnw_unix
+RUN ./mvnw_unix clean install
 
 WORKDIR ../entity-linker
 RUN sed -e 's/\r$//' mvnw > mvnw_unix
