--- a/entity-linker/pom.xml
+++ b/entity-linker/pom.xml
@@ -29,6 +29,18 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>dk.aau.cs.dkwe.edao.calypso</groupId>
+            <artifactId>data-lake</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>dk.aau.cs.dkwe.edao.calypso</groupId>
             <artifactId>communication</artifactId>
             <version>1.0-SNAPSHOT</version>
