--- a/entity-linker/pom.xml
+++ b/entity-linker/pom.xml
@@ -45,6 +45,13 @@
             <artifactId>communication</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>9.4.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
