--- a/entity-linker/pom.xml
+++ b/entity-linker/pom.xml
@@ -52,6 +52,12 @@
             <version>9.4.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-arq</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
