--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,9 +34,9 @@ services:
       - ./index/:/index
   embeddings:
     image: postgres
-    container_name: calypso_pg
+    container_name: jazero_pg
     network_mode: host
     environment:
-      - POSTGRES_USER=calypso
+      - POSTGRES_USER=jazero
       - POSTGRES_PASSWORD=1234
       - POSTGRES_DB=embeddings
