--- a/JDLC/pom.xml
+++ b/JDLC/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dk.aau.cs.dkwe.edao.calypso</groupId>
-    <artifactId>CDLC</artifactId>
+    <artifactId>JDLC</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
