--- a/JDLC/c/CMakeLists.txt
+++ b/JDLC/c/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_COMPILER_ID "GNU")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/)
 
-add_compile_options(-Wall -Wextra -pedantic -Werror)
+add_compile_options(-Wall -Wextra -pedantic)
 
 if(WIN32)
     add_compile_definitions(WINDOWS)
