--- a/data-lake/pom.xml
+++ b/data-lake/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>storagelayer</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>cloud.unum</groupId>
+            <artifactId>usearch</artifactId>
+            <version>2.8.12</version>
+        </dependency>
     </dependencies>
 
     <build>
