--- a/data-lake/pom.xml
+++ b/data-lake/pom.xml
@@ -81,6 +81,12 @@
             <artifactId>hnswlib-jna</artifactId>
             <version>1.4.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
     </dependencies>
 
     <build>
