--- a/web/pom.xml
+++ b/web/pom.xml
@@ -94,6 +94,36 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.16.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>dk.aau.cs.dkwe.edao</groupId>
+            <artifactId>jazero</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/dependencies/jazero-1.0.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>dk.aau.cs.dkwe.edao.jazero</groupId>
+            <artifactId>data-lake</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/dependencies/data-lake-1.0.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>dk.aau.cs.dkwe.edao.jazero</groupId>
+            <artifactId>communication</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/dependencies/communication-1.0.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
     </dependencies>
 
     <build>
