--- a/knowledge-graph/pom.xml
+++ b/knowledge-graph/pom.xml
@@ -45,6 +45,18 @@
             <artifactId>communication</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>9.8.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>7.17.1</version>
+        </dependency>
     </dependencies>
 
     <build>
