--- a/knowledge-graph/pom.xml
+++ b/knowledge-graph/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>communication</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-arq</artifactId>
+            <version>4.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
