--- a/web/pom.xml
+++ b/web/pom.xml
@@ -73,6 +73,11 @@
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.vaadin.componentfactory</groupId>
+            <artifactId>autocomplete</artifactId>
+            <version>24.1.7</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
