Debug data available

--- a/web/config.json
+++ b/web/config.json
@@ -9,7 +9,7 @@
       }
     },
     {
-      "name": "GitTables",
+      "name": "Pharma",
       "ip": "127.0.0.1",
       "login": {
         "username": "admin",
