HTTP web server setup

--- a/web/nginx/nginx.conf
+++ b/web/nginx/nginx.conf
@@ -3,26 +3,8 @@ server {
     server_name jazero.dk;
     server_tokens off;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
     location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name jazero.dk;
-    server_tokens off;
-
-    ssl_certificate /etc/letsencrypt/live/jazero.dk/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/jazero.dk/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    location / {
-        resolver 127.0.0.1:8080;
+        resolver 127.0.0.11;
+        proxy_pass http://jazero:8080;
     }
 }
