--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -2,19 +2,23 @@ version: "3"
 
 services:
   web:
-    container_name: jazero_web
+    container_name: jazero
     restart: unless-stopped
-    network_mode: host
     build:
       context: .
       dockerfile: Dockerfile
+    networks:
+      - jazero_web
+    ports:
+      - "8080:8080"
 
-  proxy:
+  nginx:
     image: nginx:1.15-alpine
-    network_mode: host
-    container_name: nginx_proxy
+    container_name: nginx
     restart: unless-stopped
-    depends_on: web
+    depends_on:
+      web:
+        condition: service_started
     ports:
       - "80:80"
       - "443:443"
@@ -22,14 +26,12 @@ services:
       - ./nginx:/etc/nginx/conf.d
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
+    networks:
+      - jazero_web
     links:
       - web
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
 
-  certbot:
-    image: certbot/certbot
-    restart: unless-stopped
-    volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+networks:
+  jazero_web:
+    driver: bridge
